--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,7 +9,7 @@ application.secret="eZbhWhL>kBNV:0EI>lU[i:nj`OuaO:WnX8E3T/G0ouAOlMMsR4>YXF?8GZG/
 
 # The application languages
 # ~~~~~
-application.langs="en"
+application.langs="en,ja"
 
 # Global object class
 # ~~~~~
