--- a/conf/application.conf
+++ b/conf/application.conf
@@ -33,8 +33,6 @@ application.langs="en,ja"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
 # db.default.password=""
 
@@ -57,3 +55,7 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+db.default.driver=org.postgresql.Driver
+db.default.url=${DATABASE_URL}
+db.default.poolInitialSize=5
+db.default.poolMaxSize=10
