--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,3 +59,5 @@ db.default.driver=org.postgresql.Driver
 db.default.url=${DATABASE_URL}
 db.default.poolInitialSize=5
 db.default.poolMaxSize=10
+
+redis.uri=${REDIS_URI}
