--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,3 +61,12 @@ db.default.poolInitialSize=5
 db.default.poolMaxSize=10
 
 redis.uri=${REDIS_URI}
+
+logger.scalikejdbc=DEBUG
+ 
+# グローバル設定
+scalikejdbc.global.loggingSQLAndTime.enabled=true
+scalikejdbc.global.loggingSQLAndTime.logLevel=debug
+scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
+scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=1000
+scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
