--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,8 @@ db.default.poolInitialSize=1
 db.default.poolMaxSize=5
 
 redis.uri=${REDIS_URI}
+redis.maxIdle=${?REDIS_MAX_IDLE}
+redis.maxActive=${?REDIS_MAX_ACTIVE}
 
 logger.scalikejdbc=DEBUG
  
