Change log level

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,7 @@ logger.root=ERROR
 logger.play=INFO
 
 # Logger provided to your application:
-logger.application=DEBUG
+logger.application=INFO
 
 db.default.driver=org.postgresql.Driver
 db.default.url=${DATABASE_URL}
@@ -64,11 +64,11 @@ redis.uri=${REDIS_URI}
 redis.maxIdle=${?REDIS_MAX_IDLE}
 redis.maxActive=${?REDIS_MAX_ACTIVE}
 
-logger.scalikejdbc=DEBUG
+logger.scalikejdbc=INFO
  
 # グローバル設定
 scalikejdbc.global.loggingSQLAndTime.enabled=true
-scalikejdbc.global.loggingSQLAndTime.logLevel=debug
+scalikejdbc.global.loggingSQLAndTime.logLevel=INFO
 scalikejdbc.global.loggingSQLAndTime.warningEnabled=true
 scalikejdbc.global.loggingSQLAndTime.warningThresholdMillis=1000
 scalikejdbc.global.loggingSQLAndTime.warningLogLevel=warn
